Updated Palm Species

--- a/notebooks/reports/OpenAI/1.0_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1.0_urls_google.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2419e4aa",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c7c4a968",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a57025eb",
    "metadata": {},
    "outputs": [
@@ -250,10 +250,36 @@
        " 'Dypsis glabrescens',\n",
        " 'Dypsis heteromorpha',\n",
        " 'Dypsis heterophylla',\n",
-       " 'Dypsis hiarakae']"
+       " 'Dypsis hiarakae',\n",
+       " 'Dypsis jumelleana',\n",
+       " 'Dypsis lastelliana',\n",
+       " 'Dypsis linearis',\n",
+       " 'Dypsis lutescens',\n",
+       " 'Dypsis malcomberi',\n",
+       " 'Dypsis mananjarensis',\n",
+       " 'Dypsis marojejyi',\n",
+       " 'Dypsis mcdonaldiana',\n",
+       " 'Dypsis minuta',\n",
+       " 'Dypsis nodifera',\n",
+       " 'Dypsis ovobontsira',\n",
+       " 'Dypsis perrieri',\n",
+       " 'Dypsis pilulifera',\n",
+       " 'Dypsis prestoniana',\n",
+       " 'Dypsis procumbens',\n",
+       " 'Dypsis pusilla',\n",
+       " 'Dypsis schatzii',\n",
+       " 'Dypsis scottiana',\n",
+       " 'Dypsis serpentina',\n",
+       " 'Dypsis tenuissima',\n",
+       " 'Dypsis thiryana',\n",
+       " 'Dypsis tokoravina',\n",
+       " 'Dypsis utilis',\n",
+       " 'Elaeis oleifera',\n",
+       " 'Euterpe catinga',\n",
+       " 'Euterpe oleracea']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4dc7bc7e",
    "metadata": {},
    "outputs": [
@@ -412,28 +438,54 @@
       "Dypsis glabrescens done\n",
       "Dypsis heteromorpha done\n",
       "Dypsis heterophylla done\n",
-      "Dypsis hiarakae done\n"
+      "Dypsis hiarakae done\n",
+      "Dypsis jumelleana done\n",
+      "Dypsis lastelliana done\n",
+      "Dypsis linearis done\n",
+      "Dypsis lutescens done\n",
+      "Dypsis malcomberi done\n",
+      "Dypsis mananjarensis done\n",
+      "Dypsis marojejyi done\n",
+      "Dypsis mcdonaldiana done\n",
+      "Dypsis minuta done\n",
+      "Dypsis nodifera done\n",
+      "Dypsis ovobontsira done\n",
+      "Dypsis perrieri done\n",
+      "Dypsis pilulifera done\n",
+      "Dypsis prestoniana done\n",
+      "Dypsis procumbens done\n",
+      "Dypsis pusilla done\n",
+      "Dypsis schatzii done\n",
+      "Dypsis scottiana done\n",
+      "Dypsis serpentina done\n",
+      "Dypsis tenuissima done\n",
+      "Dypsis thiryana done\n",
+      "Dypsis tokoravina done\n",
+      "Dypsis utilis done\n",
+      "Elaeis oleifera done\n",
+      "Euterpe catinga done\n",
+      "Euterpe oleracea done\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 48%|████▊     | 160/333 [00:38<00:41,  4.13it/s]\n"
+      " 56%|█████▌    | 186/333 [00:37<00:29,  4.97it/s]\n"
      ]
     },
     {
      "ename": "HttpError",
-     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Gaussia+maya+&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
+     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Hydriastele+variabilis+description&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpalm\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m palm_species_google[palm] \u001b[39m=\u001b[39m search_results\n",
+      "Cell \u001b[0;32mIn[8], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpalm\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m palm_species_google[palm] \u001b[39m=\u001b[39m search_results\n",
       "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Gaussia+maya+&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
+      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Hydriastele+variabilis+description&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
      ]
     }
    ],
@@ -469,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "aa406d42",
    "metadata": {},
    "outputs": [],
