--- a/notebooks/reports/surveys/1.1_survey_sents_ChatGPT.ipynb
+++ b/notebooks/reports/surveys/1.1_survey_sents_ChatGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,39 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
     "import glob\n",
+    "import json\n",
     "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_clean_paragraphs(input_dict):\n",
+    "\n",
+    "    # Create a new dictionary to store the cleaned-up values\n",
+    "    output_dict = {}\n",
+    "    \n",
+    "    # Loop through the keys and values of the input dictionary\n",
+    "    for key, value in input_dict.items():\n",
+    "        # Convert the list of values to a set to remove duplicates\n",
+    "        unique_values = set(value)\n",
+    "        \n",
+    "        # Join the sentences together into a single string\n",
+    "        combined_string = ' '.join(unique_values)\n",
+    "        \n",
+    "        # Add the cleaned-up string to the output dictionary\n",
+    "        output_dict[key] = combined_string\n",
+    "    \n",
+    "    # Return the cleaned-up dictionary\n",
+    "    return output_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,8 +88,70 @@
     "df_melt = df_melt.drop_duplicates()\n",
     "\n",
     "# Merge the dataframes based on the 'Sentence' column\n",
-    "df = pd.merge(df_melt, df_responses, on='Sentence')"
+    "df = pd.merge(df_melt, df_responses, on='Sentence')\n",
+    "df = df.drop(columns=[\"variable\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paragraph_folder = \"../../../data/OpenAI/DescriptionSnippets/Paragraphs/\"\n",
+    "sentence_folder = \"../../../data/OpenAI/DescriptionSnippets/Sentences/\"\n",
+    "\n",
+    "caribbean_jsons_paras = glob.glob(F\"{paragraph_folder}c*\")\n",
+    "caribbean_jsons_sents = glob.glob(F\"{sentence_folder}c*\")\n",
+    "\n",
+    "caribbean_jsons_paras.sort()\n",
+    "caribbean_jsons_sents.sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_file = caribbean_jsons_paras[0]\n",
+    "with open(json_file, 'r') as f:\n",
+    "    caribbean_species_paragraph = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Amyris ignea': 'In small scales, some families can show distinct distribution patterns, as that found for Lecythidaceae in French Guyana [32]. Mol. Cell. Opin. Microb. Front. 4 Altmetric Hop flowers are densely covered by glandular trichomes, specialized structures that secrete secondary metabolites into epidermal outgrowths3.'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_clean_paragraphs(caribbean_species_paragraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
