--- a/notebooks/reports/OpenAI/5.1.3_ChatGPT_zeroshot_per_species.ipynb
+++ b/notebooks/reports/OpenAI/5.1.3_ChatGPT_zeroshot_per_species.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,17 @@
     "            result_dict[key] = []\n",
     "        result_dict[key].append(value)\n",
     "    \n",
-    "    return result_dict"
+    "    return result_dict\n",
+    "\n",
+    "def combine_words_with_capital(string):\n",
+    "    # remove non-alphanumeric characters\n",
+    "    string = re.sub(r'[^\\w\\s/]', '', string)\n",
+    "    # split the string on the slash (\"/\")\n",
+    "    parts = string.split('/')\n",
+    "    # combine words with capitalization for each part\n",
+    "    parts = [''.join(word.capitalize() for word in part.split()) for part in parts]\n",
+    "    # join the parts with an empty string\n",
+    "    return ''.join(parts)"
    ]
   },
   {
@@ -96,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,24 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "species_lst = df_Andrei.index\n",
-    "traits = list(caribbean_traits_dict.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                    \r"
+      "                                                                     \r"
      ]
     }
    ],
@@ -147,37 +147,56 @@
     "# Define the path to the directory where the prompts and results will be saved\n",
     "folder_prompts = \"../../../data/OpenAI/PromptsResults/ZeroShot/\"\n",
     "\n",
+    "species_lst = df_Andrei.index\n",
+    "trait_dict = create_trait_dict(df_Andrei)\n",
+    "traits = list(trait_dict.keys())\n",
+    "\n",
     "# Loop over species\n",
-    "for idx, species in (pbar := tqdm(enumerate(species_lst[0:5]), leave=False, position=0)):\n",
-    "    pbar.set_description(f\"{idx}: {species}\")\n",
+    "for idx, species in enumerate(species_lst[0:2]):\n",
     "   \n",
     "    # Replace spaces in the species name with underscores\n",
-    "    file_name = species.replace(' ', '_')\n",
+    "    folder_species = species.replace(' ', '_')\n",
     "\n",
-    "    # Create the question and options for the ChatGPT prompt\n",
-    "    question = F\"Can you create semantic triples for the following traits {traits}, for the species '{species}' and return the answer as a list of of tuples for easy parsing?\"\n",
-    "    user_content = F\"{question}\"\n",
+    "    # Try to create a directory for the prompts for the species\n",
+    "    try:\n",
+    "        os.makedirs(F\"{folder_prompts}{folder_species}\")\n",
+    "    except FileExistsError:\n",
+    "        pass\n",
     "\n",
-    "    # Check if file is already there (OpenAI Outage)\n",
-    "    if os.path.exists(F\"{folder_prompts}{file_name}.json\"):\n",
-    "        continue\n",
+    "    for trait in (pbar := tqdm(traits[0:4], leave=False, position=0)):\n",
+    "        pbar.set_description(f\"{idx}: {species}\")\n",
     "\n",
-    "    # # Create the messages to send to the ChatGPT API\n",
-    "    messages = [\n",
-    "        {\"role\": \"user\", \"content\": user_content}\n",
-    "        ]\n",
-    "    # Call the ChatGPT API to generate a completion for the prompt\n",
-    "    completion = openai.ChatCompletion.create(\n",
-    "        model = \"gpt-3.5-turbo\",\n",
-    "        messages = messages,\n",
-    "    )\n",
+    "        # Get the options for the trait\n",
+    "        options = trait_dict[trait]\n",
     "\n",
-    "    # Lower pressure on API?\n",
-    "    time.sleep(2)\n",
+    "        # Create the question and options for the ChatGPT prompt\n",
+    "        question = F\"For the species '{species}' which of the following options is applicable for the trait '{trait}'\" \n",
+    "        text_helper = F\"Return 'NA' if none of the options are aplicable. Please return your answer as a Python list.\"\n",
+    "        user_content = F\"{question}\\n{options}\\n{text_helper}\"\n",
     "\n",
-    "    # Save the completion to a JSON file with the file name in the directory\n",
-    "    with open(F\"{folder_prompts}{file_name}.json\", 'w') as fp:\n",
-    "        json.dump(completion, fp)\n",
+    "        # Combine the words in the trait name with capital letters and use this as the file name\n",
+    "        file_name = combine_words_with_capital(trait)\n",
+    "        \n",
+    "        # Check if file is already there (OpenAI Outage)\n",
+    "        if os.path.exists(F\"{folder_prompts}{folder_species}/{file_name}.json\"):\n",
+    "            continue\n",
+    "\n",
+    "        # # Create the messages to send to the ChatGPT API\n",
+    "        messages = [\n",
+    "            {\"role\": \"user\", \"content\": user_content}\n",
+    "            ]\n",
+    "        # Call the ChatGPT API to generate a completion for the prompt\n",
+    "        completion = openai.ChatCompletion.create(\n",
+    "            model = \"gpt-3.5-turbo\",\n",
+    "            messages = messages,\n",
+    "        )\n",
+    "\n",
+    "        # Lower pressure on API?\n",
+    "        time.sleep(2)\n",
+    "\n",
+    "        # Save the completion to a JSON file with the file name in the directory\n",
+    "        with open(F\"{folder_prompts}{folder_species}/{file_name}.json\", 'w') as fp:\n",
+    "            json.dump(completion, fp)\n",
     "            "
    ]
   },
@@ -185,151 +204,19 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "species = species_lst[0]\n",
-    "\n",
-    "question = F\"Can you create semantic triples for the following traits {traits}, for the species '{species}' based on the following Python dictionary and return the answer as a list of of tuples for easy parsing?\"\n",
-    "user_content = F\"{question}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Can you create semantic triples for the following traits ['Life form', 'Leaf position', 'Leaf composition', 'Leaf shape', 'Leaf margin', 'Leaf upper side', 'Leaf lower side', 'Leaf glands', 'Leaf rachis', 'Thorns/spines', 'Stipules', 'Inflorescence type', 'Sepals / calyx shape', 'Sepals / calyx numer', 'Petals / corolla shape', 'Petals / corolla number', 'Petals / corolla colour', 'Stamen shape', 'Stamen number', 'Fruit type', 'Fruit shape', 'Fruit colour', 'Aril colour', 'Seed colour'], for the species 'Avicennia germinans' based on the following Python dictionary and return the answer as a list of of tuples for easy parsing?\n"
+      "For the species 'Avicennia germinans' which of the following options is applicable for the trait 'Leaf shape'\n",
+      "['elliptic', 'elliptic, elongate', 'elliptic, lanceolate', 'elliptic, obovate', 'elliptic, ovate', 'elliptic, ovate, round', 'elongate', 'elongate, elliptic, obovate', 'elongate, obovate', 'kidney-shaped, circular', 'lanceolate, elliptic', 'linear', 'linear, obovate', 'obovate', 'obovate, elliptic', 'obovate, spathulate', 'ovate', 'ovate, circular', 'ovate, elliptic', 'ovate, elliptic, elongate', 'ovate, heart-shaped', 'spathulate, obovate']\n",
+      "Return 'NA' if none of the options are aplicable. Please return you answer as a Python tuple list.\n"
      ]
     }
    ],
    "source": [
     "print(user_content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = df_Andrei.loc[species]\n",
-    "GT_traits = list(s.where(s == 1).dropna().index)\n",
-    "empty_traits = [F\"{Entity}:\" for (Entity, Value) in GT_traits]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trait_dict = create_trait_dict(df_Andrei)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trait = list(trait_dict.keys())[20]\n",
-    "options = trait_dict[trait]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "question = F\"\"\"For the species '{species}' which of the following options is applicable for the trait '{trait}':\n",
-    "{options}\n",
-    "\n",
-    "Return 'NA' if none of the options are apliccable.\n",
-    "Please return you answer as a Python tuple list.\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For the species 'Avicennia germinans' which of the following options is applicable for the trait 'Fruit shape':\n",
-      "['2-locular, flattened, globose', '3-5-locular, globose', 'elongate', 'elongate, constricted between seeds', 'elongate, slightly constricted between seeds', 'elongate, strongly constricted between seeds', 'flattened obovoid', 'flattened ovate', 'flattened, elongate, twisted', 'flattened, thick, elongate, strongly curved', 'globose', 'globose, 3-angulated', 'linear', 'not flattened, elongate, slightly curved', 'ovoid', 'pyriform, ovoid', 'slightly flattened, elongate, curved']\n",
-      "\n",
-      "Return 'NA' if none of the options are apliccable.\n",
-      "Please return you answer as a Python tuple list.\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(question)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "messages = [\n",
-    "    {\"role\": \"user\", \"content\": question}\n",
-    "    ]\n",
-    "# Call the ChatGPT API to generate a completion for the prompt\n",
-    "completion = openai.ChatCompletion.create(\n",
-    "    model = \"gpt-3.5-turbo\",\n",
-    "    messages = messages,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-6yI43eNqTZHlKNaXqo9W76xB0IvlC at 0x7fd771860090> JSON: {\n",
-       "  \"choices\": [\n",
-       "    {\n",
-       "      \"finish_reason\": \"stop\",\n",
-       "      \"index\": 0,\n",
-       "      \"message\": {\n",
-       "        \"content\": \"The applicable option for the trait 'Fruit shape' in the species 'Avicennia germinans' is \\\"elongate, slightly constricted between seeds\\\".\\n\\nTherefore, the Python tuple list is:\\n[('Fruit shape', 'elongate, slightly constricted between seeds')]\",\n",
-       "        \"role\": \"assistant\"\n",
-       "      }\n",
-       "    }\n",
-       "  ],\n",
-       "  \"created\": 1679827139,\n",
-       "  \"id\": \"chatcmpl-6yI43eNqTZHlKNaXqo9W76xB0IvlC\",\n",
-       "  \"model\": \"gpt-3.5-turbo-0301\",\n",
-       "  \"object\": \"chat.completion\",\n",
-       "  \"usage\": {\n",
-       "    \"completion_tokens\": 58,\n",
-       "    \"prompt_tokens\": 203,\n",
-       "    \"total_tokens\": 261\n",
-       "  }\n",
-       "}"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "completion"
    ]
   }
  ],
