--- a/notebooks/reports/OpenAI/1.0_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1.0_urls_google.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2419e4aa",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c7c4a968",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a57025eb",
    "metadata": {},
    "outputs": [
@@ -276,10 +276,37 @@
        " 'Dypsis utilis',\n",
        " 'Elaeis oleifera',\n",
        " 'Euterpe catinga',\n",
-       " 'Euterpe oleracea']"
+       " 'Euterpe oleracea',\n",
+       " 'Gaussia maya',\n",
+       " 'Geonoma aspidiifolia',\n",
+       " 'Geonoma baculifera',\n",
+       " 'Geonoma brenesii',\n",
+       " 'Geonoma camana',\n",
+       " 'Geonoma chococola',\n",
+       " 'Geonoma concinna',\n",
+       " 'Geonoma congesta',\n",
+       " 'Geonoma cuneata',\n",
+       " 'Geonoma deversa',\n",
+       " 'Geonoma epetiolata',\n",
+       " 'Geonoma ferruginea',\n",
+       " 'Geonoma hugonis',\n",
+       " 'Geonoma interrupta',\n",
+       " 'Geonoma laxiflora',\n",
+       " 'Geonoma leptospadix',\n",
+       " 'Geonoma longipedunculata',\n",
+       " 'Geonoma longivaginata',\n",
+       " 'Geonoma macrostachys',\n",
+       " 'Geonoma maxima',\n",
+       " 'Hydriastele costata',\n",
+       " 'Hydriastele cylindrocarpa',\n",
+       " 'Hydriastele flabellata',\n",
+       " 'Hydriastele hombronii',\n",
+       " 'Hydriastele longispatha',\n",
+       " 'Hydriastele pinangoides',\n",
+       " 'Hydriastele variabilis']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4dc7bc7e",
    "metadata": {},
    "outputs": [
@@ -464,28 +491,55 @@
       "Dypsis utilis done\n",
       "Elaeis oleifera done\n",
       "Euterpe catinga done\n",
-      "Euterpe oleracea done\n"
+      "Euterpe oleracea done\n",
+      "Gaussia maya done\n",
+      "Geonoma aspidiifolia done\n",
+      "Geonoma baculifera done\n",
+      "Geonoma brenesii done\n",
+      "Geonoma camana done\n",
+      "Geonoma chococola done\n",
+      "Geonoma concinna done\n",
+      "Geonoma congesta done\n",
+      "Geonoma cuneata done\n",
+      "Geonoma deversa done\n",
+      "Geonoma epetiolata done\n",
+      "Geonoma ferruginea done\n",
+      "Geonoma hugonis done\n",
+      "Geonoma interrupta done\n",
+      "Geonoma laxiflora done\n",
+      "Geonoma leptospadix done\n",
+      "Geonoma longipedunculata done\n",
+      "Geonoma longivaginata done\n",
+      "Geonoma macrostachys done\n",
+      "Geonoma maxima done\n",
+      "Hydriastele costata done\n",
+      "Hydriastele cylindrocarpa done\n",
+      "Hydriastele flabellata done\n",
+      "Hydriastele hombronii done\n",
+      "Hydriastele longispatha done\n",
+      "Hydriastele pinangoides done\n",
+      "Hydriastele variabilis done\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 56%|█████▌    | 186/333 [00:37<00:29,  4.97it/s]\n"
+      " 64%|██████▍   | 214/333 [00:44<00:24,  4.79it/s]\n"
      ]
     },
     {
      "ename": "HttpError",
-     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Hydriastele+variabilis+description&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
+     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Lytocaryum+hoehnei+&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mHttpError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpalm\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m palm_species_google[palm] \u001b[39m=\u001b[39m search_results\n",
+      "Cell \u001b[0;32mIn[7], line 13\u001b[0m\n\u001b[1;32m      8\u001b[0m search_query \u001b[39m=\u001b[39m \u001b[39mF\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mpalm\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00mquery\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m \u001b[39m# print(search_query)\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \n\u001b[1;32m     12\u001b[0m \u001b[39m# Search results (10 per search)\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m search_results \u001b[39m=\u001b[39m google_search(search_query, api_key\u001b[39m=\u001b[39;49mapi_key, cse_id\u001b[39m=\u001b[39;49mcse_id)\n\u001b[1;32m     14\u001b[0m \u001b[39m# Google Urls\u001b[39;00m\n\u001b[1;32m     15\u001b[0m palm_species_google[palm] \u001b[39m=\u001b[39m search_results\n",
       "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Hydriastele+variabilis+description&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
+      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Lytocaryum+hoehnei+&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
      ]
     }
    ],
@@ -521,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "aa406d42",
    "metadata": {},
    "outputs": [],
