--- a/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses_zeroshot.ipynb
+++ b/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses_zeroshot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,8 @@
     "import collections\n",
     "from collections import defaultdict\n",
     "from sklearn.metrics import roc_curve, auc, precision_recall_curve\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.metrics import f1_score\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import plotly.graph_objs as go\n",
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +86,77 @@
     "folder_plotting = \"../../../data/plotting/\"\n",
     "file_name = \"df_caribbean_zeroshot.csv\"\n",
     "df.to_csv(F\"{folder_plotting}{file_name}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metric Scores"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### F1 Score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., ..., 1., 1., 1.],\n",
+       "       [0., 1., 0., ..., 0., 0., 0.],\n",
+       "       [0., 1., 1., ..., 1., 0., 0.],\n",
+       "       ...,\n",
+       "       [0., 1., 1., ..., 1., 1., 1.],\n",
+       "       [1., 0., 1., ..., 1., 1., 1.],\n",
+       "       [0., 1., 1., ..., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8377381346417886\n"
+     ]
+    }
+   ],
+   "source": [
+    "gt_array = df_caribbean_GT.values.flatten()\n",
+    "pred_array = df_caribbean_ChatGPT.values.flatten()\n",
+    "\n",
+    "# Remove NaN values from pred_array\n",
+    "# nan_indices = np.isnan(pred_array)\n",
+    "# gt_array = gt_array[~nan_indices]\n",
+    "# pred_array = pred_array[~nan_indices]\n",
+    "\n",
+    "# imp = SimpleImputer(strategy='most_frequent', missing_values=np.NaN)\n",
+    "# pred_array = imp.fit_transform(pred_array)\n",
+    "\n",
+    "f1 = f1_score(gt_array, pred_array, average='weighted')\n",
+    "print(f1)"
    ]
   },
   {
