--- a/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses_original.ipynb
+++ b/notebooks/reports/OpenAI/5.3.1_ChatGPT_prompt_analyses_original.ipynb
@@ -3747,7 +3747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -11969,6 +11969,7 @@
         }
        ],
        "layout": {
+        "height": 400,
         "shapes": [
          {
           "line": {
@@ -13104,6 +13105,7 @@
          "x": 0.5,
          "y": 0.9
         },
+        "width": 1200,
         "xaxis": {
          "tickangle": -25,
          "tickfont": {
@@ -13247,9 +13249,17 @@
     "        tickvals = x_tickvals,\n",
     "        ticktext = x_ticktext,\n",
     "        ),\n",
+    "\n",
+    "    width=1200, height=400,\n",
     ")\n",
     "\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "folder_figures = \"../../../reports/figures/\"\n",
+    "file_name = \"PxPlot_HTML_HeatmapPredictions_TextData.html\"\n",
+    "fig.write_html(F\"{folder_figures}{file_name}\")\n",
+    "file_name = \"PxPlot_PDF_HeatmapPredictions_TextData.pdf\"\n",
+    "fig.write_image(F\"{folder_figures}{file_name}\")"
    ]
   }
  ],
